[package]
name = "rust_bresenham"
version = "0.1.4"
edition = "2021"
description = "A crate for drawing Bresenham lines"
license = "MIT OR Apache-2.0"
authors = ["Kamil Dydo <dydokamil@icloud.com>"]
repository = "https://github.com/dydokamil/rust_bresenham"
homepage="https://crates.io/crates/rust_bresenham"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
